# 43-OldSchoolDemoEffects

./: CMakeLists.txt  Palette.cpp  Palette.h  PlasmaEffect.cpp  PlasmaEffect.h  README.md  TunnelEffect.cpp  TunnelEffect.h  Video.cpp  Video.h  main.cpp
Effects/: Effect.cpp  Effect.h  FireEffect.cpp  FireEffect.h  PlasmaEffect.cpp  PlasmaEffect.h  TunnelEffect.cpp  TunnelEffect.h
